Working on scraper for github
